--- a/blogApplication/pom.xml
+++ b/blogApplication/pom.xml
@@ -38,6 +38,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-validation</artifactId>
+    
+</dependency>
+		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -66,6 +73,13 @@
     <artifactId>springdoc-openapi-ui</artifactId>
     <version>1.6.14</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+<dependency>
+    <groupId>org.modelmapper</groupId>
+    <artifactId>modelmapper</artifactId>
+    <version>3.1.1</version>
+</dependency>
+
 		
 	</dependencies>
 
