Image upload to data base and file in  but thair are are some but becouse of that server getting uncought exception

--- a/blogApplication/src/main/resources/application.properties
+++ b/blogApplication/src/main/resources/application.properties
@@ -10,9 +10,12 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.defer-datasource-initialization= true
 
+spring.servlet.multipart.max-file-size = 10MB
+spring.servlet.multipart.max-request-size = 10MB
+project.image = images/
 # Security
 #spring.security.user.name=user1	
 #spring.security.user.password=user1
-security.basic.enabled=false
-management.security.enabled=false
-security.ignored=/**
+#security.basic.enabled=false
+#management.security.enabled=false
+#security.ignored=/**
