--- a/blogApplication/src/main/resources/application.properties
+++ b/blogApplication/src/main/resources/application.properties
@@ -13,9 +13,12 @@ spring.jpa.defer-datasource-initialization= true
 spring.servlet.multipart.max-file-size = 10MB
 spring.servlet.multipart.max-request-size = 10MB
 project.image = images/
+
 # Security
-#spring.security.user.name=user1	
-#spring.security.user.password=user1
+logging.level.org.springframework.security = DEBUG;
+spring.security.user.name=devesh
+spring.security.user.password=devesh
+spring.security.user.roles=ADMIN
 #security.basic.enabled=false
 #management.security.enabled=false
 #security.ignored=/**
